plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.10'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.adsquare'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

compileJava {
	options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
	jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += '--enable-preview'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// spring
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
	testImplementation 'io.projectreactor:reactor-test'
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
}

sourceSets{
	test {
		java.srcDirs = ['src/test/java/unit', 'src/test/java/intg']
	}
}
